<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="69dp"

    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="11dp"
                android:layout_marginStart="11dp"
                android:background="#D8D8D8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:id="@+id/Zeichen"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"

                android:layout_marginStart="14dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@string/ausfall"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/entfaellt" />

            <TextView
                android:id="@+id/Stunde"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_alignBottom="@+id/Stunde_Fach"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:fontFamily="Roboto Regular"
                android:text="@string/stunde"
                android:textColor="#585858"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/FachTextView"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_alignBottom="@+id/Stunde_Fach"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/lehrer"
                android:textColor="#585858"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/Kurs"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_alignBottom="@+id/Stunde_Fach"
                android:layout_alignEnd="@+id/Grund"

                android:layout_alignRight="@+id/Grund"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:fontFamily="Roboto Regular"
                android:text="@string/kurs"
                android:textColor="#585858"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/Stunde_Fach"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Stunde_Fach"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignLeft="@+id/Grund"
                android:layout_alignStart="@+id/Grund"
                android:layout_alignTop="@+id/Zeichen"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                android:layout_weight="1"
                android:fontFamily="Roboto Regular"
                android:text="@string/fach"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/Zeichen"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Grund"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_alignBottom="@+id/Zeichen"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/Zeichen"
                android:layout_toRightOf="@+id/Zeichen"
                android:layout_weight="1"
                android:text="@string/grund_grund"
                android:textColor="#585858"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Zeichen" />

        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>